--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JashanDemo">
         <activity
+            android:name=".DisplayList"
+            android:exported="true" />
+        <activity
+            android:name=".MusicList"
+            android:exported="true" />
+        <activity
             android:name=".SimpleList"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
         <receiver android:name=".MyReceiver" />
@@ -36,8 +40,7 @@
             android:exported="true" />
         <activity
             android:name=".WelcomeUser"
-            android:exported="true">
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".MainActivity2"
             android:exported="true" />
