--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JashanDemo">
         <activity
+            android:name=".StudentsDisplay"
+            android:exported="true" />
+        <activity
             android:name=".StudentForm"
             android:exported="true">
             <intent-filter>
@@ -22,11 +25,10 @@
         </activity>
         <activity
             android:name=".RecyclerDemo"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".FileHandling"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ListenerDemo"
             android:exported="true" />
