--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -12,6 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.JashanDemo">
+        <activity
+            android:name=".GettingAPage"
+            android:exported="true" />
         <activity
             android:name=".BottomNav"
             android:exported="true">
@@ -23,14 +27,13 @@
         </activity>
         <activity
             android:name=".Gallery"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".StudentsDisplay"
             android:exported="true" />
         <activity
             android:name=".StudentForm"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".RecyclerDemo"
             android:exported="true" />
