--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,16 @@
         android:theme="@style/Theme.JashanDemo">
         <activity
             android:name=".GettingAPage"
-            android:exported="true" />
-        <activity
-            android:name=".BottomNav"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".BottomNav"
+            android:exported="true">
         </activity>
         <activity
             android:name=".Gallery"
