--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +12,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.JashanDemo">
+        <activity
+            android:name=".InsertStudent"
+            android:exported="true" />
         <activity
             android:name=".GettingAPage"
             android:exported="true">
@@ -24,11 +28,10 @@
         </activity>
         <activity
             android:name=".BottomNav"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".Gallery"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".StudentsDisplay"
             android:exported="true" />
