--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.JashanDemo">
+        android:theme="@style/Theme.JashanDemo"
+        android:usesCleartextTraffic="true">
         <activity
-            android:name=".InsertStudent"
+            android:name=".SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,12 +24,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".GettingAPage"
+            android:name=".InsertStudent"
             android:exported="true">
         </activity>
         <activity
-            android:name=".BottomNav"
+            android:name=".GettingAPage"
             android:exported="true"></activity>
+        <activity
+            android:name=".BottomNav"
+            android:exported="true" />
         <activity
             android:name=".Gallery"
             android:exported="true" />
