--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:theme="@style/Theme.JashanDemo"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".UserLocation"
+            android:name=".SongTime"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,6 +29,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".VideoPlayer"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".UserLocation"
+            android:exported="true"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -44,8 +51,7 @@
         <activity
             android:name=".MapsActivity"
             android:exported="true"
-            android:label="@string/title_activity_maps">
-        </activity>
+            android:label="@string/title_activity_maps" />
         <activity
             android:name=".SplashScreen"
             android:exported="true" />
@@ -63,7 +69,7 @@
             android:exported="true" />
         <activity
             android:name=".StudentsDisplay"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".StudentForm"
             android:exported="true" />
