--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         android:theme="@style/Theme.JashanDemo"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".MotionSensor"
+            android:exported="true" />
+        <activity
             android:name=".SongTime"
             android:exported="true">
             <intent-filter>
@@ -31,11 +34,10 @@
         </activity>
         <activity
             android:name=".VideoPlayer"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".UserLocation"
-            android:exported="true"></activity>
+            android:exported="true" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
