--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,10 +21,7 @@
         android:theme="@style/Theme.JashanDemo"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".MotionSensor"
-            android:exported="true" />
-        <activity
-            android:name=".SongTime"
+            android:name=".Fading"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,8 +30,15 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".MotionSensor"
+            android:exported="true" />
+        <activity
+            android:name=".SongTime"
+            android:exported="true">
+        </activity>
+        <activity
             android:name=".VideoPlayer"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".UserLocation"
             android:exported="true" />
