--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:theme="@style/Theme.JashanDemo"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".Fading"
+            android:name=".GettingAnImage"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,12 +30,18 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".TimerNotification"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".Fading"
+            android:exported="true"></activity>
+        <activity
             android:name=".MotionSensor"
             android:exported="true" />
         <activity
             android:name=".SongTime"
-            android:exported="true">
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".VideoPlayer"
             android:exported="true" />
