--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -22,7 +22,10 @@
         android:theme="@style/Theme.JashanDemo"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".GettingAnImage"
+            android:name=".CheckOtp"
+            android:exported="true" />
+        <activity
+            android:name=".GetOtp"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,12 +34,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".TimerNotification"
+            android:name=".GettingAnImage"
             android:exported="true">
         </activity>
         <activity
+            android:name=".TimerNotification"
+            android:exported="true" />
+        <activity
             android:name=".Fading"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".MotionSensor"
             android:exported="true" />
